3.0.0
Added Theming Content
Added Dice
Added Color Picking for Chips and Dice
Added a Section in the Help Section for Key Binds
Added Save States
Fix Help Section